--- a/design.html
+++ b/design.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
 
@@ -82,7 +83,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
       <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
-      <p> <small>UX . Prototype . Visual System</small></p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. UX . Prototype . Visual System</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -96,7 +97,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
       <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
-      <p> <small>Research . Interaction . Prototype </small></p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. Research . Interaction . Prototype </small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -110,7 +111,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
       <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
-      <p> <small>Research . UI . Prototype</small></p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -129,7 +130,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
       <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
-      <p> <small>Research . Design Thinking . Development</small></p>
+      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -143,7 +144,7 @@
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
-      <p> <small>UX . Design Thinking</small></p>
+      <p> <small>Peronsl project . UX . Design Thinking</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
