--- a/index_backup.html
+++ b/index_backup.html
@@ -188,26 +188,22 @@
 </div>
 
 
-
-
-
-
-
 <!-- project card -->
 
 <div class="container projectCategory">
-  <h3>Other Projects</h3>
+  <h3>Architecture Projects</h3>
+  <a class="more" href="architecture.html">View More Projects</a>
 </div>
 
 <div class="card-deck" id="projectCard">
 
-  <a href="architecture.html" >
-  <div class="card text-center" style="height: 430px;">
-    <img class="card-img-top" src="image/other/1.jpg" alt="Card image cap">
+  <a href="music.html" >
+  <div class="card text-center" style="height: 490px;">
+    <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title" style="color: black">Architecture</h4>
-      <p class="card-text" style="color: black">Auditorium, Greenhouse, Chapel, Observatory</p>
-      <p> <small> 3D Modeling . Visual Design . Floor Programming</small></p>
+      <h4 class="card-title" style="color: black">Auditorium on Mississipi</h4>
+      <p class="card-text" style="color: black">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
+      <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -215,13 +211,13 @@
   </div>
   </a>
 
-  <a href="interior.html" >
-  <div class="card text-center" style="height: 430px;">
-    <img class="card-img-top" src="image/other/2.jpg" alt="Card image cap">
+  <a href="green.html" >
+  <div class="card text-center" style="height: 490px;">
+    <img class="card-img-top" src="image/architecture/greenhouse/3.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title" style="color: black">Interior Design</h4>
-      <p class="card-text" style="color: black">Hotel Headquater, Office Building, Apartment</p>
-      <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Intern Project </span>. 3D Modeling . Rendering . Material</small></p>
+      <h4 class="card-title" style="color: black">Greenhouse</h4>
+      <p class="card-text" style="color: black">A project that considers water, wind, sunlight conditions for different types of plants</p>
+      <p style="padding-top: 22px"> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
@@ -229,13 +225,13 @@
   </div>
   </a>
 
-  <a href="art.html" >
-  <div class="card text-center" style="height: 430px;">
-    <img class="card-img-top" src="image/other/3.jpg" alt="Card image cap">
+  <a href="chapel.html" >
+  <div class="card text-center" style="height: 490px;">
+    <img class="card-img-top" src="image/architecture/chapel/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title" style="color: black">Art</h4>
-      <p class="card-text" style="color: black">Painting, Drawing, Photography, Flying Machine</p>
-      <p> <small> Observation . 2D . 3D Experiments</small></p>
+      <h4 class="card-title" style="color: black">Urban Chapel</h4>
+      <p class="card-text" style="color: black">A chapel that designed for people to meditate in forest park</p>
+      <p style="padding-top: 22px"> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
       <a href="chapel.html" class="card-link">Read more</a>
@@ -244,6 +240,109 @@
   </a>
 
 </div>
+
+<!-- project card -->
+
+<div class="container projectCategory">
+  <h3>Interior Design Projects</h3>
+</div>
+
+<div class="card-deck" id="projectCard">
+
+
+<div class="card text-center" style="height: 470px;">
+    <img class="card-img-top" src="image/architecture/marriot/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">A Hotel Headquater</h4>
+      <p class="card-text" style="color: black">Help the team win a design competition for a hotel headquarter project over 80000 sq ft </p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span> . Contact for details</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+
+  <a href="opartments.html" >
+  <div class="card text-center" style="height: 470px;">
+    <img class="card-img-top" src="image/architecture/opartments/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Opartments</h4>
+      <p class="card-text" style="color: black">An project designed for a client in DC for a co-working space. </p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span></small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
+  <a href="view.html" >
+  <div class="card text-center" style="height: 470px;">
+    <img class="card-img-top" src="image/architecture/view/1.png" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">The View From Here</h4>
+      <p class="card-text" style="color: black">Apartment designed for college students to enjoy both urban life and relieve from nature.</p>
+      <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+</div>
+
+<!-- project card -->
+
+<div class="container projectCategory">
+  <h3>Art Projects</h3>
+  <a class="more" href="art.html">View More Projects</a>
+</div>
+
+<div class="card-deck" id="projectCard">
+  <a href="painting.html" >
+  <div class="card text-center" style="height: 430px;">
+    <img class="card-img-top" src="image/art/painting/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Painting</h4>
+      <p class="card-text" style="color: black">Studyings of color, landscape and human body</p>
+      <p> <small>(Tools: Oil Painting)</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
+  <a href="drawing.html" >
+  <div class="card text-center" style="height: 430px;">
+    <img class="card-img-top" src="image/art/drawing/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Drawing</h4>
+      <p class="card-text" style="color: black">Studyings of Black and white</p>
+      <p> <small>(Tools: Hand Drawing)</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
+  <a href="photography.html" >
+  <div class="card text-center" style="height: 430px;">
+    <img class="card-img-top" src="image/art/photography/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Photography</h4>
+      <p class="card-text" style="color: black">Studyings of Details</p>
+      <p> <small>(Tools: DSLR Camera)</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
+</div>
+
 
 
 
