--- a/interior.html
+++ b/interior.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
   <body>
 
@@ -75,6 +76,32 @@
 </ul>
 <div class="row">
 
+  <div class="card text-center" style="height: 470px;">
+    <img class="card-img-top" src="image/architecture/marriot/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">A Hotel Headquater</h4>
+      <p class="card-text" style="color: black">Help the team win a design competition for a hotel headquarter project over 80000 sq ft </p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span> . Contact for details</small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+
+  <a href="opartments.html" >
+  <div class="card text-center" style="height: 470px;">
+    <img class="card-img-top" src="image/architecture/opartments/1.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h4 class="card-title" style="color: black">Opartments</h4>
+      <p class="card-text" style="color: black">An project designed for a client in DC for a co-working space. </p>
+      <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span></small></p>
+    </div>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
+    </div>
+  </div>
+  </a>
+
   <a href="view.html" >
   <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/view/1.png" alt="Card image cap">
@@ -89,29 +116,7 @@
   </div>
   </a>
 
-  <a href="opartments.html" >
-  <div class="card text-center" style="height: 470px;">
-    <img class="card-img-top" src="image/architecture/opartments/1.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title" style="color: black">Opartments</h4>
-      <p class="card-text" style="color: black">An project designed for a client in DC for a co-working space. </p>
-      <p> <small>(Tools: Revit, Octane Rendering, Photoshop and Illustrator)</small></p>
-    </div>
-    <div class="card-footer" style="visibility: hidden;">
-      <a href="chapel.html" class="card-link">Read more</a>
-    </div>
-  </div>
-  </a>
-  <div class="card text-center" style="visibility: hidden;">
-    <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
-    <div class="card-body">
-      <h4 class="card-title">Auditorium on Mississipi</h4>
-      <p class="card-text">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
-    </div>
-    <div class="card-footer">
-      <a href="music.html" class="card-link">Read more</a>
-    </div>
-  </div>
+
 </div>
 </div>
 
