--- a/design.html
+++ b/design.html
@@ -152,14 +152,15 @@
   </div>
   </a>
 
-  <div class="card text-center" style="visibility: hidden;">
-    <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
+  <div class="card text-center" style="height: 430px">
+    <img class="card-img-top" src="image/landmark/2.jpg" alt="Card image cap" style="opacity: 0.5">
     <div class="card-body">
-      <h4 class="card-title">Fuzhou</h4>
-      <p class="card-text">An online dictionary designed to preserve Chinese dialect.</p>
+      <h4 class="card-title" style="color: black; opacity: 0.4">Coming Soon</h4>
+      <p class="card-text" style="color: black; opacity: 0.4">A website for Landmarks Association of St. Louis</p>
+      <p> <small ><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Hackathon . Web Design</small></p>
     </div>
-    <div class="card-footer">
-      <a href="fuzhou.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
 </div>
