--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 68%; text-align: center">
         <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
-        <p style="margin-top: 20px; font-size: 18px">to think from different perspectives | to design for users | to combine creativity and rationality <span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
+        <p style="margin-top: 20px; font-size: 18px; text-align: center">to think from different perspectives | to design for users | to combine creativity and rationality <br><span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
       </div>
 
 
@@ -77,8 +77,8 @@
 
     <div class="col-sm-8">
       <div class="jumbotron" style="background-color : #74b9ff; color: white">
-        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+        <h1 class="display-3" style="font-size: 40px; text-align: center;">Hello, I'm Sherry, a multidiciplinary designer</h1>
+        <p style="text-align: center;">For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
       </div>
     </div>
 
@@ -97,7 +97,7 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-  <div class="row">
+  <div class="row" style="max-width: 1800px; margin: 0 auto">
 
   <a href="journey.html" >
   <div class="card text-center" style="height: 450px;">
@@ -144,7 +144,7 @@
   
 </div>
 
-  <div class="row">
+  <div class="row" style="max-width: 1800px; margin: 0 auto">
 
   <a href="split.html" >
   <div class="card text-center" style="height: 430px;">
@@ -203,6 +203,10 @@
 
 <div class="card-deck" id="projectCard">
 
+  <div class="row" style="max-width: 1800px; margin: 0 auto">
+    
+  
+
   <a href="architecture.html" >
   <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/other/1.jpg" alt="Card image cap">
@@ -244,6 +248,8 @@
     </div>
   </div>
   </a>
+
+  </div>
 
 </div>
 
