--- a/journey.html
+++ b/journey.html
@@ -229,7 +229,7 @@
 </div>
 
 
-<img class="img-fluid" src="image/journey/36.png" id="prototype">
+<img class="img-fluid" src="image/journey/44.jpg" id="prototype">
 
 
 <div class="content" >
