--- a/architecture.html
+++ b/architecture.html
@@ -72,7 +72,7 @@
     <a class="nav-link disabled" href="art.html">Art</a>
   </li>
 </ul>
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
 
   <a href="music.html" >
   <div class="card text-center" style="height: 490px;">
@@ -116,7 +116,7 @@
   </a>
   </div>
 
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
   <a href="observatory.html" >
   <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/observatory/1.jpg" alt="Card image cap">
