--- a/design.html
+++ b/design.html
@@ -75,7 +75,7 @@
   </li>
 </ul>
 
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
 
   <a href="journey.html" >
   <div class="card text-center" style="height: 450px;">
@@ -122,7 +122,7 @@
   
 </div>
 
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
 
   <a href="split.html" >
   <div class="card text-center" style="height: 430px;">
