--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
 
   <a href="journey.html" >
   <div class="card text-center" style="height: 450px;">
@@ -144,7 +144,7 @@
   
 </div>
 
-  <div class="row" style="max-width: 1800px; margin: 0 auto">
+  <div class="row">
 
   <a href="split.html" >
   <div class="card text-center" style="height: 430px;">
