--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div class="row">
 
   <a href="journey.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
@@ -114,7 +114,7 @@
   </a>
 
   <a href="life.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
@@ -128,7 +128,7 @@
   </a>
 
   <a href="fuzhou.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
@@ -203,7 +203,7 @@
 
 <div class="card-deck" id="projectCard">
 
-  <div class="row" style="max-width: 1300px; margin: 0 auto">
+  <div class="row">
     
   
 
