--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 68%; text-align: center">
         <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
-        <p style="margin-top: 20px; font-size: 18px; text-align: center">to think from different perspectives | to design for users | to combine creativity and rationality <br><span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
+        <p style="margin-top: 20px; font-size: 18px">to think from different perspectives | to design for users | to combine creativity and rationality <span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
       </div>
 
 
@@ -77,8 +77,8 @@
 
     <div class="col-sm-8">
       <div class="jumbotron" style="background-color : #74b9ff; color: white">
-        <h1 class="display-3" style="font-size: 40px; text-align: center;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p style="text-align: center;">For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
+        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
       </div>
     </div>
 
@@ -100,7 +100,7 @@
   <div class="row">
 
   <a href="journey.html" >
-  <div class="card text-center">
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
@@ -114,7 +114,7 @@
   </a>
 
   <a href="life.html" >
-  <div class="card text-center">
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
@@ -128,7 +128,7 @@
   </a>
 
   <a href="fuzhou.html" >
-  <div class="card text-center">
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
@@ -174,16 +174,18 @@
   </div>
   </a>
 
-  <div class="card text-center" style="visibility: hidden;">
-    <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
+  <div class="card text-center" style="height: 430px">
+    <img class="card-img-top" src="image/landmark/2.jpg" alt="Card image cap" style="opacity: 0.5">
     <div class="card-body">
-      <h4 class="card-title">Fuzhou</h4>
-      <p class="card-text">An online dictionary designed to preserve Chinese dialect.</p>
+      <h4 class="card-title" style="color: black; opacity: 0.4">Coming Soon</h4>
+      <p class="card-text" style="color: black; opacity: 0.4">A website for Landmarks Association of St. Louis</p>
+      <p> <small ><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Hackathon . Web Design</small></p>
     </div>
-    <div class="card-footer">
-      <a href="fuzhou.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
+
 </div>
 </div>
 
@@ -200,10 +202,6 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-
-  <div class="row">
-    
-  
 
   <a href="architecture.html" >
   <div class="card text-center" style="height: 430px;">
@@ -246,8 +244,6 @@
     </div>
   </div>
   </a>
-
-  </div>
 
 </div>
 
