delete fixed height

--- a/architecture.html
+++ b/architecture.html
@@ -72,10 +72,13 @@
     <a class="nav-link disabled" href="art.html">Art</a>
   </li>
 </ul>
+
+
   <div class="row">
 
+
   <a href="music.html" >
-  <div class="card text-center" style="height: 490px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Auditorium on Mississipi</h4>
@@ -88,7 +91,7 @@
   </div>
   </a>
   <a href="green.html" >
-  <div class="card text-center" style="height: 490px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/architecture/greenhouse/3.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Greenhouse</h4>
@@ -102,7 +105,7 @@
   </a>
 
   <a href="chapel.html" >
-  <div class="card text-center" style="height: 490px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/architecture/chapel/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Urban Chapel</h4>
@@ -116,9 +119,11 @@
   </a>
   </div>
 
+
   <div class="row">
+
   <a href="observatory.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/architecture/observatory/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Observatory</h4>
@@ -132,7 +137,7 @@
   </a>
 
   <a href="building.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/architecture/building/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Building System</h4>
@@ -146,7 +151,7 @@
   </a>
 
   <a href="environment.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/architecture/environment/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Environmental System</h4>
