--- a/art.html
+++ b/art.html
@@ -68,10 +68,12 @@
   </li>
 </ul>
 
+
   <div class="row">
 
+
   <a href="painting.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/art/painting/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Painting</h4>
@@ -85,7 +87,7 @@
   </a>
 
   <a href="drawing.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/art/drawing/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Drawing</h4>
@@ -99,7 +101,7 @@
   </a>
 
   <a href="photography.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/art/photography/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Photography</h4>
@@ -115,7 +117,7 @@
 
   <div class="row">
   <a href="fly.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/art/fly/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Flying machine</h4>
