--- a/design.html
+++ b/design.html
@@ -75,10 +75,12 @@
   </li>
 </ul>
 
+
   <div class="row">
 
+
   <a href="journey.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
@@ -92,7 +94,7 @@
   </a>
 
   <a href="life.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
@@ -106,7 +108,7 @@
   </a>
 
   <a href="fuzhou.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center" 
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
@@ -122,10 +124,12 @@
   
 </div>
 
+
   <div class="row">
 
+
   <a href="split.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
@@ -139,7 +143,7 @@
   </a>
 
   <a href="uber.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
@@ -152,7 +156,7 @@
   </div>
   </a>
 
-  <div class="card text-center" style="height: 430px">
+  <div class="card text-center">
     <img class="card-img-top" src="image/landmark/2.jpg" alt="Card image cap" style="opacity: 0.5">
     <div class="card-body">
       <h4 class="card-title" style="color: black; opacity: 0.4">Coming Soon</h4>
