--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff" >
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff; " >
   <!-- Brand -->
 <!--   <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a>  -->
 
@@ -54,12 +54,12 @@
 
 <!-- self intro -->
 
-<div id="selfIntro" class="brightcolor">
+<div id="selfIntro" class="brightcolor" style="width: 100%">
 
 
       <div class="jumbotron" style="background-color : #74b9ff; color: white; margin: 0 auto; width: 68%; text-align: center">
         <h1 class="display-3" style="font-size: 40px; padding-top: 20px; padding-bottom: 20px">Hello, I'm Sherry, a passionate designer</h1>
-        <p style="margin-top: 20px; font-size: 18px">to think from different perspectives | to design for users | to combine creativity and rationality <span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
+        <p style="margin-top: 20px; font-size: 18px; text-align: center">to think from different perspectives | to design for users | to combine creativity and rationality <br><span style="visibility: hidden;">I learned to observe from different perspectives, to design for users and to combine creativity and rationality.I learned to observe from different perspectives, to design for users and to combine creativity and rationality</span></p>
       </div>
 
 
@@ -77,8 +77,8 @@
 
     <div class="col-sm-8">
       <div class="jumbotron" style="background-color : #74b9ff; color: white">
-        <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
-        <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
+        <h1 class="display-3" style="font-size: 40px; text-align: center;">Hello, I'm Sherry, a multidiciplinary designer</h1>
+        <p style="text-align: center;">For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
       </div>
     </div>
 
@@ -92,15 +92,16 @@
 <!-- project card -->
 
 <div class="container projectCategory">
-  <h3>UI/UX Projects</h3>
+  <h3 >UI/UX Projects</h3>
 <!--   <a class="more" href="design.html">View More Projects</a> -->
 </div>
 
 <div class="card-deck" id="projectCard">
   <div class="row">
 
+
   <a href="journey.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Journey</h4>
@@ -114,7 +115,7 @@
   </a>
 
   <a href="life.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Foodly</h4>
@@ -128,7 +129,7 @@
   </a>
 
   <a href="fuzhou.html" >
-  <div class="card text-center" style="height: 450px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
@@ -147,7 +148,7 @@
   <div class="row">
 
   <a href="split.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Split</h4>
@@ -161,7 +162,7 @@
   </a>
 
   <a href="uber.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Uber</h4>
@@ -174,7 +175,7 @@
   </div>
   </a>
 
-  <div class="card text-center" style="height: 430px">
+  <div class="card text-center">
     <img class="card-img-top" src="image/landmark/2.jpg" alt="Card image cap" style="opacity: 0.5">
     <div class="card-body">
       <h4 class="card-title" style="color: black; opacity: 0.4">Coming Soon</h4>
@@ -203,8 +204,12 @@
 
 <div class="card-deck" id="projectCard">
 
+  <div class="row">
+    
+  
+
   <a href="architecture.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/other/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Architecture</h4>
@@ -218,7 +223,7 @@
   </a>
 
   <a href="interior.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/other/2.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Interior Design</h4>
@@ -232,7 +237,7 @@
   </a>
 
   <a href="art.html" >
-  <div class="card text-center" style="height: 430px;">
+  <div class="card text-center">
     <img class="card-img-top" src="image/other/3.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Art</h4>
@@ -244,6 +249,8 @@
     </div>
   </div>
   </a>
+
+  </div>
 
 </div>
 
