--- a/interior.html
+++ b/interior.html
@@ -74,9 +74,11 @@
     <a class="nav-link disabled" href="art.html">Art</a>
   </li>
 </ul>
+
 <div class="row">
 
-  <div class="card text-center" style="height: 470px;">
+
+  <div class="card text-center">
     <img class="card-img-top" src="image/architecture/marriot/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">A Hotel Headquater</h4>
@@ -89,7 +91,7 @@
   </div>
 
   <a href="opartments.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/architecture/opartments/1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Opartments</h4>
@@ -103,7 +105,7 @@
   </a>
 
   <a href="view.html" >
-  <div class="card text-center" style="height: 470px;">
+  <div class="card text-center" >
     <img class="card-img-top" src="image/architecture/view/1.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">The View From Here</h4>
