--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
-      <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
+      <p class="card-text" style="color: black">A website designed to preserve the ancient dialect in Fuzhou, China.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Research . UI . Prototype</small></p>
     </div>
     <div class="card-footer" style="visibility: hidden;">
