--- a/design.html
+++ b/design.html
@@ -108,7 +108,7 @@
   </a>
 
   <a href="fuzhou.html" >
-  <div class="card text-center" 
+  <div class="card text-center">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="card-title" style="color: black">Fuzhou</h4>
