--- a/interior.html
+++ b/interior.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
-  <body>
+  <body style="background-color: #F5f5f5">
 
 
 <!-- nav bar -->
