--- a/art.html
+++ b/art.html
@@ -80,7 +80,7 @@
       <p class="card-text" style="color: black">Studyings of color, landscape and human body</p>
       <p> <small>(Tools: Oil Painting)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -94,7 +94,7 @@
       <p class="card-text" style="color: black">Studyings of Black and white</p>
       <p> <small>(Tools: Hand Drawing)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -108,7 +108,7 @@
       <p class="card-text" style="color: black">Studyings of Details</p>
       <p> <small>(Tools: DSLR Camera)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -124,7 +124,7 @@
       <p class="card-text" style="color: black">A flying machine inspired by the structure of crystal</p>
       <p> <small>(Tools: Rhino, Illustrator, Photoshop, Indesign, Photography, Laser Cutting , 3D Printing, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -137,7 +137,7 @@
       <h4 class="card-title">Building System</h4>
       <p class="card-text">A project to study the system and structure of architecture</p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="display: none;">
       <a href="building.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -147,7 +147,7 @@
       <h4 class="card-title">Environmental System</h4>
       <p class="card-text">A project to study the environmental context of buildings</p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="display: none;">
       <a href="environment.html" class="card-link">Read more</a>
     </div>
   </div>
