--- a/design.html
+++ b/design.html
@@ -87,7 +87,7 @@
       <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. UX . Prototype . Visual System</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -101,7 +101,7 @@
       <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. Research . Interaction . Prototype </small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -115,7 +115,7 @@
       <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Research . UI . Prototype</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -136,7 +136,7 @@
       <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
       <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -150,7 +150,7 @@
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
       <p> <small>Peronsl project . UX . Design Thinking</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -163,7 +163,7 @@
       <p class="card-text" style="color: black; opacity: 0.4">A website for Landmarks Association of St. Louis</p>
       <p> <small ><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Hackathon . Web Design</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
