--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. UX . Prototype . Visual System</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -122,7 +122,7 @@
       <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Most recent work </span>. Research . Interaction . Prototype </small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -136,7 +136,7 @@
       <p class="card-text" style="color: black">A website designed to preserve the ancient dialect in Fuzhou, China.</p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Research . UI . Prototype</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -155,7 +155,7 @@
       <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
       <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Design and coding </span>. Research . Design Thinking</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -169,7 +169,7 @@
       <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
       <p> <small>Peronsl project . UX . Design Thinking</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -182,7 +182,7 @@
       <p class="card-text" style="color: black; opacity: 0.4">A website for Landmarks Association of St. Louis</p>
       <p> <small ><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Working with engineers </span>. Hackathon . Web Design</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -216,7 +216,7 @@
       <p class="card-text" style="color: black">Auditorium, Greenhouse, Chapel, Observatory</p>
       <p> <small> 3D Modeling . Visual Design . Floor Programming</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -230,7 +230,7 @@
       <p class="card-text" style="color: black">Hotel Headquater, Office Building, Apartment</p>
       <p> <small> <i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> Intern Project </span>. 3D Modeling . Rendering . Material</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -244,7 +244,7 @@
       <p class="card-text" style="color: black">Painting, Drawing, Photography, Flying Machine</p>
       <p> <small> Observation . 2D . 3D Experiments</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
