--- a/interior.html
+++ b/interior.html
@@ -85,7 +85,7 @@
       <p class="card-text" style="color: black">Help the team win a design competition for a hotel headquarter project over 80000 sq ft </p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span> . Contact for details</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -98,7 +98,7 @@
       <p class="card-text" style="color: black">An project designed for a client in DC for a co-working space. </p>
       <p> <small><i class="fas fa-star" style="color: #74b9ff; margin-right: 5px"></i> <span style="color: #74b9ff"> 2017 Summer Intern </span></small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -112,7 +112,7 @@
       <p class="card-text" style="color: black">Apartment designed for college students to enjoy both urban life and relieve from nature.</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
