--- a/architecture.html
+++ b/architecture.html
@@ -85,7 +85,7 @@
       <p class="card-text" style="color: black">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -98,7 +98,7 @@
       <p class="card-text" style="color: black">A project that considers water, wind, sunlight conditions for different types of plants</p>
       <p style="padding-top: 22px"> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -112,7 +112,7 @@
       <p class="card-text" style="color: black">A chapel that designed for people to meditate in forest park</p>
       <p style="padding-top: 22px"> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -130,7 +130,7 @@
       <p class="card-text" style="color: black">An observatory inspired by the spreading pattern of leaves</p>
       <p> <small>(Tools: Handdrafting, Photography, Photoshop, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -144,7 +144,7 @@
       <p class="card-text" style="color: black">A project to study the system and structure of architecture</p>
       <p> <small>(Tools: Rhino, Illustrator, Photoshop, Indesign, Photography, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
@@ -158,7 +158,7 @@
       <p class="card-text" style="color: black">A project to study the environmental context of buildings</p>
       <p> <small>(Tools: Rhino, Climate Consultant, Illustrator, Photoshop, Indesign, Photography, Modeling)</small></p>
     </div>
-    <div class="card-footer" style="visibility: hidden;">
+    <div class="card-footer" style="display: none;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
